WAM-Studio-SF-Build/force-app/main/default/objects/Advisor_Briefing__c/Advisor_Briefing__c.object-meta.xml
<CustomObject>
    <description>Daily prioritized advisor briefing. Part of Salesforce Wealth AI Studio.</description>
    <label>Advisor Briefing</label>
    <nameField>
        <displayFormat>BRF-{00000}</displayFormat>
        <label>Advisor Briefing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisor Briefings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>