WAM-Studio-SF-Build/force-app/main/default/objects/Advisor_Briefing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advisor Briefings</relationshipLabel>
    <relationshipName>AdvisorBriefings</relationshipName>
    <type>Lookup</type>
</CustomField>