WAM-Studio-SF-Build/force-app/main/default/objects/Advisor_Briefing__c/fields/Briefing_Date__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Briefing Date</label>
    <type>Date</type>
</CustomField>