WAM-Studio-SF-Build/force-app/main/default/objects/Advisor_Briefing__c/fields/Briefing_Summary__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Summary__c</fullName>
    <label>Briefing Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>